--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "boxen": "^4.2.0",
     "chalk": "^4.1.0",
+    "unsplash-js": "^6.0.0",
     "yargs": "^15.4.1"
   }
 }
