--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "boxen": "^4.2.0",
     "chalk": "^4.1.0",
     "node-fetch": "^2.6.0",
+    "terminal-link": "^2.1.1",
     "unsplash-js": "^6.0.0",
     "yargs": "^15.4.1"
   }
