--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "bin": {
     "zubs": "./bin/index.js"
   },
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "dependencies": {
     "axios": "^0.21.2",
     "boxen": "^4.2.0",
     "chalk": "^4.1.0",
+    "dotenv": "^16.4.5",
     "node-fetch": "^2.6.7",
     "terminal-link": "^2.1.1",
     "unsplash-js": "^7.0.15",
